Created provision to store all panchayat details in user node. Slug now in place with order by

--- a/ionic/fieldApp/src/theme/variables.scss
+++ b/ionic/fieldApp/src/theme/variables.scss
@@ -28,7 +28,15 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,		  
+  favorite:   #69BB7B,
+  facebook:(
+    base: #3b5998,
+    contrast: #ffffff
+  ),
+  twitter:    #53ACEB,
+  github:     #000000,
+  instagram:  #235D8D  
 );
 
 
