--- a/ionic/fieldApp/src/pages/reset-password/reset-password.scss
+++ b/ionic/fieldApp/src/pages/reset-password/reset-password.scss
@@ -1,4 +1,4 @@
-page-login {
+page-reset-password {
   form {
     margin-bottom: 32px;
     button {
@@ -25,5 +25,5 @@ page-login {
 
   .error-message .item-inner {
     border-bottom: 0 !important;
-  } 
+  }
 }
